--- a/tata-cliq/src/components/home/Home.css
+++ b/tata-cliq/src/components/home/Home.css
@@ -9,7 +9,7 @@
 #advertise-div {
     height: 65vh;
     width: 100%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     position: relative;
     display: flex;
     background-color: #ececec;
@@ -94,7 +94,7 @@
     /* border: 1px solid black; */
     display: flex;
     align-items: center;
-    
+
 }
 
 #quickLink-div-rows {
@@ -136,7 +136,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-   
+
 }
 
 .bank-ban-card {
@@ -171,40 +171,241 @@
     height: 100%;
     width: 100%;
 }
-.ondemand-product{
-    height:60vh;
-    width:100%;
+
+.ondemand-product {
+    height: 60vh;
+    width: 100%;
     /* border:1px solid black; */
     display: flex;
     align-items: center;
-    
+
 }
-.ondemand-product-child{
-    height:100%;
-    width:80%;
+
+.ondemand-product-child {
+    height: 100%;
+    width: 80%;
     margin: auto;
     /* border:1px solid black; */
     display: flex;
     align-items: center;
     justify-content: space-around;
 }
-.ondemand-product-card{
-    height:90%;
+
+.ondemand-product-card {
+    height: 90%;
     width: 24%;
     /* border:1px solid black; */
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.ondemand-product-card-imageHolder{
-    height:90%;
-    width:90%;
+
+.ondemand-product-card-imageHolder {
+    height: 90%;
+    width: 90%;
     /* border:1px solid black; */
     border-radius: 10px;
     overflow: hidden;
 }
-.ondemand-product-card-imageHolder>img{
+
+.ondemand-product-card-imageHolder>img:hover {
+    transform: scale(1.1);
+    height: 98%;
+    width: 98%;
+}
+
+.ondemand-product-card-imageHolder>img {
+    height: 100%;
+    width: 100%;
+
+}
+
+.deals-wheels-div {
+    height: 20vh;
+    width: 100%;
+    /* border: 1px solid black; */
+    display: flex;
+    align-items: center;
+}
+
+.deals-wheels-div {
+    height: 15vh;
+    width: 80%;
+    margin: auto;
+    /* border: 1px solid black; */
+}
+
+.deals-wheels-div>img {
+    height: 100%;
+    width: 100%;
+}
+
+.offer-percent-div {
+    height: 60vh;
+    width: 100%;
+    /* border:1px solid black; */
+    display: flex;
+    align-items: center;
+
+}
+
+.offer-percent-child {
+    height: 100%;
+    width: 75%;
+    margin: auto;
+    /* border:1px solid black; */
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.offer-percent-card {
+    height: 55%;
+    width: 22%;
+    /* border:1px solid black; */
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.offer-percent-card-imageHolder {
+    height: 98%;
+    width: 98%;
+    /* border:1px solid black; */
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.offer-percent-card-imageHolder>img:hover {
+    transform: scale(1.1);
+    height: 97%;
+    width: 97%;
+}
+
+.offer-percent-card-imageHolder>img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.left-right-btn-div {
+    height: 10vh;
+    width: 100%;
+    /* border: 1px solid black; */
+}
+
+.left-right-btn-child-div {
+    height: 100%;
+    width: 80%;
+    margin: auto;
+    /* border: 1px solid black; */
+}
+
+.left-fight-algn-div {
+    height: 100%;
+    width: 10%;
+    margin-left: auto;
+    margin-right: 0%;
+    /* border: 1px solid black; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.left-half-round-btn {
+    height: 50%;
+    width: 35%;
+    border-radius: 50px 0px 0px 50px;
+    /* border:1px solid black; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    margin-right: 0.5%;
+}
+
+.left-half-round-btn>i {
+    background: transparent;
+}
+
+.right-half-round-btn {
+    height: 50%;
+    width: 35%;
+    border-radius: 0px 50px 50px 0px;
+    /* border:1px solid black; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+}
+
+.right-half-round-btn>i {
+    background: transparent;
+}
+
+.large-image-banner-div {
+    height: 45vh;
+    width: 100%;
+    /* border: 1px solid black; */
+}
+
+.large-image-banner-div-aligning {
+    height: 100%;
+    width: 80%;
+    /* border: 1px solid black; */
+    margin: auto;
+    display: flex;
+    align-items: center;
+}
+
+.large-image-banner-div-imageHolder {
+    height: 97%;
+    width: 98%;
+    margin: auto;
+    /* border:1px solid black; */
+}
+
+.large-image-banner-div-imageHolder>img {
+    height: 100%;
+    width: 100%;
+}
+
+.medium-double-div {
+    height: 65vh;
+    width: 100%;
+    /* border: 1px solid black; */
+}
+
+.medium-double-div-aligner {
+    height: 100%;
+    width: 80%;
+    margin: auto;
+    /* border: 1px solid black; */
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.medium-double-child-div {
+    height: 95%;
+    width: 47%;
+    /* border: 1px solid black; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.medium-double-imageHolder{
+    height:95%;
+    width:95%;
+    border-radius: 10px;
+    /* border:1px solid black; */
+    overflow: hidden;
+}
+.medium-double-imageHolder>img{
     height:100%;
     width:100%;
-
+}
+.medium-double-imageHolder:hover{
+    transform: scale(1.1);
 }
