--- a/tata-cliq/src/components/Navbar.css
+++ b/tata-cliq/src/components/Navbar.css
@@ -11,6 +11,9 @@
     color: white;
     background-color: #212121;
     border: 1px solid black;
+    position: sticky;
+    top:0;
+    z-index: 1;
 }
 
 #align-nav {
