--- a/tata-cliq/src/components/Navbar.css
+++ b/tata-cliq/src/components/Navbar.css
@@ -12,7 +12,7 @@
     background-color: #212121;
     border: 1px solid black;
     position: sticky;
-    top:0;
+    top: 0;
     z-index: 1;
 }
 
@@ -121,7 +121,7 @@
     display: flex;
     align-items: center;
     background: transparent;
-
+    cursor: pointer;
 }
 
 .lower-nav-list>p {
@@ -214,4 +214,40 @@
 
 .category-dropdown>div:last-child {
     border-bottom: none;
+}
+
+#profile-side {
+    height: 250px;
+    width: 200px;
+    border: 1px solid #000;
+    position: absolute;
+    right: 5%;
+    top: 45%;
+    z-index: 1;
+    background-color: white;
+
+}
+
+.profile-side-list {
+    height: 30px;
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 2%;
+    /* border: 1px solid #000; */
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+}
+
+.profile-side-list-img-hold {
+    height: 100%;
+    width: 20%;
+    /* border: 1px solid #000; */
+}
+
+.profile-side-list-img-hold>img {
+    height: 100%;
+    width: 100%;
 }
