--- a/tata-cliq/src/components/multi-products/MultiProductsHomeKitchen.css
+++ b/tata-cliq/src/components/multi-products/MultiProductsHomeKitchen.css
@@ -236,7 +236,7 @@ background-color: white;
 .product-offer-purple {
     position: absolute;
     height: 3vh;
-    width: 25%;
+    width: 30%;
     margin-top: 5%;
     /* border: 1px solid #000; */
     background-color: purple;
@@ -244,6 +244,7 @@ background-color: white;
     display: flex;
     align-items: center;
     justify-content: center;
+    white-space: nowrap;
 }
 .heart-div {
     position: absolute;
@@ -274,6 +275,7 @@ background-color: white;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: white;
 }
 
 .product-description {
