--- a/tata-cliq/src/components/profile/ProfilePage.css
+++ b/tata-cliq/src/components/profile/ProfilePage.css
@@ -8,15 +8,16 @@
 #profile-screen {
     /* height:100vh; */
     width: 100%;
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
     padding: 10vh 0;
+    background-color: #ececec;
 }
 
 #profile-screen-align {
     /* height:100vh; */
     margin: auto;
     width: 80%;
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
     display: flex;
     justify-content: space-between;
 }
@@ -24,20 +25,25 @@
 #menu-side {
     /* height:100vh; */
     width: 20%;
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
     padding-bottom: 5%;
+    background-color:white;
 }
 
 #general-info {
     /* height:100vh; */
-    width: 54%;
-    border: 1px solid #000;
+    width: 50%;
+    /* border: 1px solid #000; */
+    background-color:white;
+
 }
 
 #icon-email-id {
-    height: 100%;
+    height: 100vh;
     width: 22%;
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
+    position: relative;
+
 }
 
 #menu-side-title {
@@ -92,7 +98,7 @@
     height: 8vh;
     width: 85%;
     margin: auto;
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
     display: flex;
     align-items: center;
     font-weight: 500;
@@ -102,12 +108,15 @@
     width: 85%;
     margin: auto;
     border: 1px solid #000;
+    border-radius: 10px;
+    margin-top: 2%;
+    overflow: hidden;
 }
 
 .general-info-headers {
     height: 5vh;
     width: 100%;
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -118,26 +127,68 @@
     color: #ff496d;
 }
 
-#general-info-form {
+.general-info-form {
     width: 100%;
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
+
 }
 
 .general-info-form-fills {
     display: flex;
     align-items: center;
     width: 100%;
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
     justify-content: space-around;
+    margin: 2% 0;
 }
-.general-info-form-fills>span{
-    height:100%;
+
+.general-info-form-fills>span:nth-child(1) {
+    height: 5vh;
     width: fit-content;
-    border: 1px solid #000;
-    padding: 0 2%;
+    /* border: 1px solid #000; */
+    padding: 0 1%;
+    white-space: nowrap;
+    display: flex;
+    align-items: center;
 }
-.general-info-form-fills>input{
-    height:5vh;
+
+.general-info-form-fills>span:nth-child(2) {
+    height: 5vh;
     width: 75%;
-border-radius: 5px;
+    border-radius: 5px;
+    /* border: 1px solid black; */
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: 2%;
+}
+
+.general-info-form-fills>span:nth-child(2)>input {
+    height: 100%;
+    width: 100%;
+}
+#small-box{
+    height: 20vh;
+    width: 100%;
+    /* border: 1px solid #000; */
+    position:sticky;
+    top:15vh;
+    background-color:white;
+
+}
+#small-box-image-holder{
+    height:8vh; 
+    width: 24%;
+    /* border: 1px solid #000; */
+    border-radius: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
+    overflow: hidden;
+}
+#small-box-image-holder>img{
+    height: 100%;
+    width: 100%;
+}
+#small-text{
+    text-align: center;
 }
