--- a/tata-cliq/src/components/multi-products/MultiProductsGadgets.css
+++ b/tata-cliq/src/components/multi-products/MultiProductsGadgets.css
@@ -199,9 +199,9 @@ background-color: white;
     border-bottom: none;
 }
 
-#beauty-product-cart {
+.product-cart {
     height: 60vh;
-    width: 30%;
+    width: 24%;
     border: 1px solid #ebe7e7;
     /* margin-top: 2px; */
     margin-top: 2%;
