--- a/tata-cliq/src/components/Navbar.css
+++ b/tata-cliq/src/components/Navbar.css
@@ -13,7 +13,7 @@
     border: 1px solid black;
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 3;
 }
 
 #align-nav {
@@ -122,11 +122,17 @@
     align-items: center;
     background: transparent;
     cursor: pointer;
+    justify-content: space-around;
 }
 
 .lower-nav-list>p {
     margin-left: 2%;
     background: transparent;
+}
+
+.inner-lower {
+    color: white;
+
 }
 
 .lower-nav-list>p>i {
@@ -196,9 +202,9 @@
     width: 15vw;
     /* border: 1px solid black; */
     position: absolute;
-    z-index: 1;
     left: 25%;
     /* display: none; */
+    z-index: 2;
 }
 
 .category-dropdown-cards {
@@ -210,6 +216,7 @@
     margin: auto;
     justify-content: space-between;
     cursor: pointer;
+    color: black;
 }
 
 .category-dropdown>div:last-child {
@@ -229,7 +236,7 @@
 }
 
 .profile-side-list {
-    height: 30px;
+    height: 10%;
     width: 80%;
     margin-left: 10%;
     margin-top: 2%;
@@ -240,7 +247,15 @@
     justify-content: space-between;
     cursor: pointer;
 }
-
+#login-btn{
+    height:4vh;
+    width:80%;
+    background-color: #c60543;
+    border: 1px solid #c60543;
+    color: white;
+    margin: auto;
+    border-radius: 50px;
+}
 .profile-side-list-img-hold {
     height: 100%;
     width: 20%;
@@ -250,4 +265,99 @@
 .profile-side-list-img-hold>img {
     height: 100%;
     width: 100%;
+}
+
+#parent-signup {
+    height: 100vh;
+    width: 100%;
+    border: 1px solid #000;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 0;
+    /* display: none; */
+}
+
+#signup {
+    height: 50vh;
+    width: 40%;
+    border: 1px solid #000;
+    position: fixed;
+    margin-top: 15%;
+    margin-left: 30%;
+    background-color: white;
+    color: black;
+    /* text-align: center; */
+    font-size: 1.2em;
+}
+
+#signup>h1 {
+    text-align: center;
+}
+
+#close-x {
+    position: absolute;
+    right: 4%;
+    top: 2%;
+    cursor: pointer;
+}
+
+#sign-form>label {
+    margin-left: 10%;
+    margin-right: auto;
+}
+
+#sign-form>input {
+    height: 5vh;
+    width: 80%;
+    margin-left: 10%;
+}
+
+#sign-form>input[type="submit"] {
+    margin-top: 5%;
+    background-color: black;
+    color: white;
+    font-weight: 600;
+    font-size: 1.2em;
+}
+#login{
+    height: 50vh;
+    width: 40%;
+    border: 1px solid #000;
+    position: fixed;
+    margin-top: 15%;
+    margin-left: 30%;
+    background-color: white;
+    color: black;
+    /* text-align: center; */
+    font-size: 1.2em;
+}
+#login>h1 {
+    text-align: center;
+}
+#login-form{
+    margin-top: 5%;
+}
+#login-form>label {
+    margin-left: 10%;
+    margin-right: auto;
+}
+#login-form>input {
+    height: 5vh;
+    width: 80%;
+    margin-left: 10%;
+}
+#login-form>input[type="submit"] {
+    margin-top: 5%;
+    background-color: black;
+    color: white;
+    font-weight: 600;
+    font-size: 1.2em;
+}
+#login-form>P:last-child{
+    margin-left:10%;
+    margin-top: 2%;
+}
+#click{
+    height:3vh;
+    width: 15%;
 }
