--- a/tata-cliq/src/components/profile/ProfilePage.css
+++ b/tata-cliq/src/components/profile/ProfilePage.css
@@ -33,9 +33,16 @@
 #general-info {
     /* height:100vh; */
     width: 50%;
-    /* border: 1px solid #000; */
+    border: 1px solid #000;
     background-color:white;
 
+}
+#general-info-edit{
+    width: 100%;
+    border: 1px solid #000;
+    background-color:white;
+    margin-bottom: 2%;
+    
 }
 
 #icon-email-id {
@@ -111,6 +118,22 @@
     border-radius: 10px;
     margin-top: 2%;
     overflow: hidden;
+}
+.general-info-details-edit {
+    width: 85%;
+    margin: auto;
+    border: 1px solid #000;
+    border-radius: 10px;
+    margin-top: 2%;
+    overflow: hidden;
+    margin-bottom: 2%;
+}
+.save{
+    height: 5vh;
+    margin-left: 24%;
+    width: fit-content;
+    padding:0 2%;
+    margin-bottom: 2%;
 }
 
 .general-info-headers {
